--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                 shortDescription: 'Pão, carne suculenta, queijo, alface, tomate, molho especial.',
                 fullDescription: 'Nosso clássico Suculento é uma explosão de sabor com carne grelhada na perfeição, queijo derretido, vegetais frescos e nosso molho secreto. Uma verdadeira experiência Lolly Burgers. Preparado com ingredientes de alta qualidade para garantir o melhor sabor em cada mordida.',
                 price: 2500, // in KZ
-                image: 'img/pratos/Suculento.jpg',
+                image: 'img/Suculento.jpg',
                 sizes: ['standard'],
                 extras: ['Queijo Extra (+500 KZ)', 'Molho Extra (+300 KZ)'],
                 popular: true,
@@ -395,7 +395,7 @@
                 shortDescription: 'Pão, carne, queijo, alface, tomate, dois ovos, molho especial.',
                 fullDescription: 'Uma variação rica do nosso Suculento, com a adição de dois ovos fritos à perfeição, adicionando uma textura e sabor extra. Ideal para quem ama um bom brunch! Combina a suculência da carne com a cremosidade dos ovos.',
                 price: 2800,
-                image: 'img/pratos/com 2.jpg',
+                image: 'img/com 2.jpg',
                 sizes: ['standard'],
                 extras: ['Queijo Extra (+500 KZ)', 'Bacon Extra (+700 KZ)'],
                 popular: false,
@@ -408,7 +408,7 @@
                 shortDescription: 'Pão, carne, queijo, alface, tomate, bacon crocante, molho especial.',
                 fullDescription: 'Para os amantes de bacon! Nosso Super Suculento leva generosas fatias de bacon crocante, elevando o sabor a um novo patamar. Uma combinação irresistível que vai te deixar com água na boca.',
                 price: 3200,
-                image: 'img/pratos/com bacon.jpg',
+                image: 'img/com bacon.jpg',
                 sizes: ['standard'],
                 extras: ['Queijo Extra (+500 KZ)', 'Molho Extra (+300 KZ)'],
                 popular: true,
@@ -421,7 +421,7 @@
                 shortDescription: 'Duas carnes suculentas, queijo duplo, alface, tomate, molho especial.',
                 fullDescription: 'O dobro do sabor! Com duas carnes e queijo duplo, o Suculento Duplo é para os que não têm medo de um desafio e querem o máximo de satisfação. Perfeito para o apetite voraz, garantindo uma refeição robusta e deliciosa.',
                 price: 5500,
-                image: 'img/pratos/duplo.jpg',
+                image: 'img/duplo.jpg',
                 sizes: ['standard', 'duplo'],
                 extras: ['Queijo Extra (+500 KZ)', 'Bacon Extra (+700 KZ)'],
                 popular: true,
@@ -434,7 +434,7 @@
                 shortDescription: 'Tiras de frango grelhadas, pimentos, cebola, tortilhas.',
                 fullDescription: 'Nossas Fahitas de Frango são preparadas com suculentas tiras de frango grelhadas, pimentos coloridos e cebola caramelizada, servidas com tortilhas macias e molho à escolha. Uma explosão de sabores frescos e texturas variadas.',
                 price: 3000,
-                image: 'img/pratos/de frango.jpg',
+                image: 'img/de frango.jpg',
                 sizes: ['standard'],
                 extras: ['Guacamole (+1000 KZ)', 'Sour Cream (+700 KZ)'],
                 popular: false,
@@ -447,7 +447,7 @@
                 shortDescription: 'Tiras de carne grelhadas, pimentos, cebola, tortilhas.',
                 fullDescription: 'Desfrute das nossas Fahitas de Carne com tenras tiras de bife grelhado, pimentos vibrantes e cebola, servidas com tortilhas frescas. Uma experiência tex-mex autêntica que vai te transportar para o México a cada garfada.',
                 price: 4000,
-                image: 'img/pratos/de carne.jpg',
+                image: 'img/de carne.jpg',
                 sizes: ['standard'],
                 extras: ['Queijo Ralado (+700 KZ)', 'Jalapeños (+500 KZ)'],
                 popular: true,
@@ -460,7 +460,7 @@
                 shortDescription: 'Hambúrguer Super Suculento, batata frita e refrigerante.',
                 fullDescription: 'O combo perfeito para uma refeição completa! Inclui nosso famoso Super Suculento, uma porção generosa de batata frita crocante e uma gasosa à sua escolha para acompanhar. Tudo o que você precisa em uma única e deliciosa oferta.',
                 price: 5000,
-                image: 'img/pratos/com refri.jpg',
+                image: 'img/com refri.jpg',
                 sizes: ['standard'],
                 extras: [],
                 popular: true,
@@ -473,7 +473,7 @@
                 shortDescription: 'Batatas fritas crocantes e douradas.',
                 fullDescription: 'Nossas batatas fritas são cortadas à mão, crocantes por fora e macias por dentro, salpicadas com o sal perfeito. O acompanhamento ideal para qualquer prato, impossível comer apenas uma!',
                 price: 1000,
-                image: 'img/pratos/batata.jpg',
+                image: 'img/batata.jpg',
                 sizes: ['pequena', 'média', 'grande'],
                 extras: ['Molho de Queijo (+500 KZ)', 'Bacon Bits (+700 KZ)'],
                 popular: true,
@@ -486,7 +486,7 @@
                 shortDescription: 'Batatas doces fritas, levemente adocicadas.',
                 fullDescription: 'Uma alternativa deliciosa, as nossas batatas doces fritas são naturalmente adocicadas e perfeitas para quem busca algo diferente. Servidas quentinhas e crocantes, são um deleite para o paladar.',
                 price: 1000,
-                image: 'img/pratos/doce.jpg',
+                image: 'img/doce.jpg',
                 sizes: ['pequena', 'média', 'grande'],
                 extras: ['Molho de Maionese Picante (+400 KZ)'],
                 popular: false,
@@ -499,7 +499,7 @@
                 shortDescription: 'Refrigerante clássico de cola.',
                 fullDescription: 'A Coca-Cola original, gelada e refrescante. O acompanhamento perfeito para o seu Lolly Burger, trazendo um sabor inconfundível.',
                 price: 1000,
-                image: 'img/pratos/cola.png',
+                image: 'img/cola.png',
                 sizes: ['330ml', '500ml'],
                 extras: ['Gelo'],
                 popular: true,
@@ -512,7 +512,7 @@
                 shortDescription: 'Refrigerante de laranja efervescente.',
                 fullDescription: 'Refrescante Fanta de Laranja, com seu sabor cítrico e borbulhante. Uma explosão de alegria a cada gole, perfeita para energizar seu dia.',
                 price: 1000,
-                image: 'img/pratos/fanta.jpg',
+                image: 'img/fanta.jpg',
                 sizes: ['330ml', '500ml'],
                 extras: ['Gelo'],
                 popular: false,
@@ -525,7 +525,7 @@
                 shortDescription: 'Refrigerante cítrico e transparente.',
                 fullDescription: 'Sprite, o refrigerante com sabor limão-lima que refresca em qualquer momento. Leve e efervescente, é a escolha ideal para quem busca algo leve e saboroso.',
                 price: 1000,
-                image: 'img/pratos/sprite.jpg',
+                image: 'img/sprite.jpg',
                 sizes: ['330ml', '500ml'],
                 extras: ['Gelo'],
                 popular: false,
@@ -538,7 +538,7 @@
                 shortDescription: 'Água mineral natural.',
                 fullDescription: 'Água mineral pura e refrescante, ideal para se manter hidratado. Essencial para acompanhar qualquer refeição, garantindo leveza e bem-estar.',
                 price: 250,
-                image: 'img/pratos/AGUA-DE-MESA-PET-PURA-500ml.jpg',
+                image: 'img/AGUA-DE-MESA-PET-PURA-500ml.jpg',
                 sizes: ['500ml'],
                 extras: [],
                 popular: true,
@@ -551,7 +551,7 @@
                 shortDescription: '12 mini hambúrgueres perfeitos para eventos.',
                 fullDescription: 'Ideal para festas e eventos, a nossa dúzia de mini hambúrgueres é feita com os mesmos ingredientes frescos e saborosos, em tamanho reduzido para petiscar. Surpreenda seus convidados com essa delícia!',
                 price: 19000,
-                image: 'img/pratos/mini.jpg',
+                image: 'img/mini.jpg',
                 sizes: ['1 dúzia'],
                 extras: ['Molhos variados (+1500 KZ)'],
                 popular: false,
@@ -564,7 +564,7 @@
                 shortDescription: '12 mini cachorros-quentes para festas.',
                 fullDescription: 'Uma dúzia de mini cachorros-quentes deliciosos, perfeitos para servir em celebrações ou como um petisco divertido. Pão macio, salsicha saborosa e molhos à escolha. A alegria garantida para qualquer ocasião!',
                 price: 16000,
-                image: 'img/pratos/hd.jpg',
+                image: 'img/hd.jpg',
                 sizes: ['1 dúzia'],
                 extras: ['Ketchup', 'Mostarda', 'Maionese'],
                 popular: false,
@@ -1273,4 +1273,5 @@
 
     </script>
 </body>
+
 </html>
