--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                 shortDescription: 'Pão, carne, queijo, alface, tomate, dois ovos, molho especial.',
                 fullDescription: 'Uma variação rica do nosso Suculento, com a adição de dois ovos fritos à perfeição, adicionando uma textura e sabor extra. Ideal para quem ama um bom brunch! Combina a suculência da carne com a cremosidade dos ovos.',
                 price: 2800,
-                image: 'img/com 2.jpg',
+                image: 'img/com ovo.jpg',
                 sizes: ['standard'],
                 extras: ['Queijo Extra (+500 KZ)', 'Bacon Extra (+700 KZ)'],
                 popular: false,
@@ -460,7 +460,7 @@
                 shortDescription: 'Hambúrguer Super Suculento, batata frita e refrigerante.',
                 fullDescription: 'O combo perfeito para uma refeição completa! Inclui nosso famoso Super Suculento, uma porção generosa de batata frita crocante e uma gasosa à sua escolha para acompanhar. Tudo o que você precisa em uma única e deliciosa oferta.',
                 price: 5000,
-                image: 'img/com refri.jpg',
+                image: 'img/com 3.jpg',
                 sizes: ['standard'],
                 extras: [],
                 popular: true,
@@ -538,7 +538,7 @@
                 shortDescription: 'Água mineral natural.',
                 fullDescription: 'Água mineral pura e refrescante, ideal para se manter hidratado. Essencial para acompanhar qualquer refeição, garantindo leveza e bem-estar.',
                 price: 250,
-                image: 'img/AGUA-DE-MESA-PET-PURA-500ml.jpg',
+                image: 'img/mineral.png',
                 sizes: ['500ml'],
                 extras: [],
                 popular: true,
@@ -551,7 +551,7 @@
                 shortDescription: '12 mini hambúrgueres perfeitos para eventos.',
                 fullDescription: 'Ideal para festas e eventos, a nossa dúzia de mini hambúrgueres é feita com os mesmos ingredientes frescos e saborosos, em tamanho reduzido para petiscar. Surpreenda seus convidados com essa delícia!',
                 price: 19000,
-                image: 'img/mini.jpg',
+                image: 'img/com 2.jpg',
                 sizes: ['1 dúzia'],
                 extras: ['Molhos variados (+1500 KZ)'],
                 popular: false,
@@ -1273,5 +1273,4 @@
 
     </script>
 </body>
-
 </html>
