--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                 shortDescription: 'Pão, carne suculenta, queijo, alface, tomate, molho especial.',
                 fullDescription: 'Nosso clássico Suculento é uma explosão de sabor com carne grelhada na perfeição, queijo derretido, vegetais frescos e nosso molho secreto. Uma verdadeira experiência Lolly Burgers. Preparado com ingredientes de alta qualidade para garantir o melhor sabor em cada mordida.',
                 price: 2500, // in KZ
-                image: 'img/',
+                image: 'img/suculento.jpg',
                 sizes: ['standard'],
                 extras: ['Queijo Extra (+500 KZ)', 'Molho Extra (+300 KZ)'],
                 popular: true,
@@ -1274,4 +1274,5 @@
     </script>
 </body>
 </html>
+
 
