--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                 shortDescription: 'Pão, carne suculenta, queijo, alface, tomate, molho especial.',
                 fullDescription: 'Nosso clássico Suculento é uma explosão de sabor com carne grelhada na perfeição, queijo derretido, vegetais frescos e nosso molho secreto. Uma verdadeira experiência Lolly Burgers. Preparado com ingredientes de alta qualidade para garantir o melhor sabor em cada mordida.',
                 price: 2500, // in KZ
-                image: 'img/suculento.jpg',
+                image: 'img/Suculento.jpg',
                 sizes: ['standard'],
                 extras: ['Queijo Extra (+500 KZ)', 'Molho Extra (+300 KZ)'],
                 popular: true,
@@ -395,7 +395,7 @@
                 shortDescription: 'Pão, carne, queijo, alface, tomate, dois ovos, molho especial.',
                 fullDescription: 'Uma variação rica do nosso Suculento, com a adição de dois ovos fritos à perfeição, adicionando uma textura e sabor extra. Ideal para quem ama um bom brunch! Combina a suculência da carne com a cremosidade dos ovos.',
                 price: 2800,
-                image: 'img/com ovo.jpg',
+                image: 'img/1.jpg',
                 sizes: ['standard'],
                 extras: ['Queijo Extra (+500 KZ)', 'Bacon Extra (+700 KZ)'],
                 popular: false,
@@ -421,7 +421,7 @@
                 shortDescription: 'Duas carnes suculentas, queijo duplo, alface, tomate, molho especial.',
                 fullDescription: 'O dobro do sabor! Com duas carnes e queijo duplo, o Suculento Duplo é para os que não têm medo de um desafio e querem o máximo de satisfação. Perfeito para o apetite voraz, garantindo uma refeição robusta e deliciosa.',
                 price: 5500,
-                image: 'img/duplo.jpg',
+                image: 'img/Nouburguer_CARBONARABURGUER_RodolfoRegini-1-1024x683.jpg',
                 sizes: ['standard', 'duplo'],
                 extras: ['Queijo Extra (+500 KZ)', 'Bacon Extra (+700 KZ)'],
                 popular: true,
@@ -460,7 +460,7 @@
                 shortDescription: 'Hambúrguer Super Suculento, batata frita e refrigerante.',
                 fullDescription: 'O combo perfeito para uma refeição completa! Inclui nosso famoso Super Suculento, uma porção generosa de batata frita crocante e uma gasosa à sua escolha para acompanhar. Tudo o que você precisa em uma única e deliciosa oferta.',
                 price: 5000,
-                image: 'img/com 3.jpg',
+                image: 'img/22.jpg',
                 sizes: ['standard'],
                 extras: [],
                 popular: true,
@@ -1274,5 +1274,3 @@
     </script>
 </body>
 </html>
-
-
