--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                 shortDescription: 'Duas carnes suculentas, queijo duplo, alface, tomate, molho especial.',
                 fullDescription: 'O dobro do sabor! Com duas carnes e queijo duplo, o Suculento Duplo é para os que não têm medo de um desafio e querem o máximo de satisfação. Perfeito para o apetite voraz, garantindo uma refeição robusta e deliciosa.',
                 price: 5500,
-                image: 'img/Image September 28, 2025 - 12_16PM.png',
+                image: 'img/28, 2025 - 1_26PM - Copia.png',
                 sizes: ['standard', 'duplo'],
                 extras: ['Queijo Extra (+500 KZ)', 'Bacon Extra (+700 KZ)'],
                 popular: true,
@@ -1273,4 +1273,5 @@
 
     </script>
 </body>
+
 </html>
